# Airport_Ops

./: .env.example  .gitignore  Dockerfile  README.md  app.py  architecture.md  env.py  events.py  idea.md  inference.py  models.py  openenv.yaml  phases.md  pyproject.toml  requirements.txt  state.py
data/: eta_table.json
data/scenarios/: task1.json  task2.json  task3.json
graders/: __init__.py  base.py  task1.py  task2.py  task3.py
server/: app.py
